--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@absinthe/socket": "^0.2.1",
+    "@absinthe/socket-apollo-link": "^0.2.1",
     "@apollo/client": "^3.3.17",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "apollo-link": "^1.2.14",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "graphql": "^15.5.0",
