--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "apollo-link": "^1.2.14",
+    "apollo-phoenix-websocket": "^0.6.2",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "graphql": "^15.5.0",
@@ -27,7 +28,8 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "^12.1.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
