--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
     "@absinthe/socket": "^0.2.1",
     "@absinthe/socket-apollo-link": "^0.2.1",
     "@apollo/client": "^3.3.17",
+    "@apollo/react-hooks": "^4.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "apollo-cache-inmemory": "^1.6.6",
     "apollo-link": "^1.2.14",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
     "apollo-phoenix-websocket": "^0.6.2",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "graphql": "^15.5.0",
+    "js-cookie": "^2.2.1",
+    "mobx": "^6.3.0",
+    "mobx-react": "^7.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
@@ -29,6 +36,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
+    "rxjs": "^7.0.1",
     "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
